Date picker added, making dropdown options appeare correctly regardless of containers overflow parameter

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body{
   overflow: hidden;
   margin: 0;
   background-color: #202422;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* The main background of the SPA */
