--- a/src/styles/CreateTreePopup.css
+++ b/src/styles/CreateTreePopup.css
@@ -1,16 +1,20 @@
 .create-tree-popup-container {
+  margin: 0;
   background-color: #0e0f0f;
   color: aqua;
   position: absolute; /* use absolute if it's within a relatively positioned parent */
   width: 800px;
   height: 80vh;
-  align-items: center;
   align-self: center;
   z-index: 9999; /* ensure it's on top */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   animation: slideUp 0.2s ease-in forwards;
   transform: translateY(60%);
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: auto;
  
 
 }
@@ -27,18 +31,19 @@
 
 .scroll-wrapper {
   /* background-color: burlywood; */
-  height: 800px;
-  width: 800px;
+  height: 600px;
+  width: 700px;
   display: flex;
   justify-content: center;
   align-items: end;
 }
 
 .create-tree-form-container {
-  height: 700px;
-  width: 700px;
+  height: auto;
+  width: 600px;
   overflow: auto;
 
+  padding: 40px;
   /* background-color: green; */
   display: flex;
   flex-direction: column;
@@ -47,6 +52,7 @@
 
 
 .field-title {
+  font-size: 15px;
   color: darkslategray;
   margin-left: 10px;
   margin-bottom: 2px;
@@ -58,10 +64,10 @@
 .input-field {
   color: lightblue;
   padding: 5px;
-  width: 400px;
+  width: 350px;
   background-color: transparent;
   border-radius: 5px;
-  border: solid darkslategray;
+  border: 2px solid #283338;
   font-size: 20px;
   margin-bottom: 15px;
 
